# MLIR-tutorial-src

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Tuto-opt/: CMakeLists.txt  Tuto-opt.cpp
include/TutoDialect/: CMakeLists.txt  TutoDialect.h  TutoDialect.td  TutoOps.h  TutoOps.td  TutoPass.h
lib/: CMakeLists.txt
lib/Tuto/: CMakeLists.txt  TutoDialect.cpp  TutoOps.cpp  TutoPass.cpp
test/: CMakeLists.txt
test/TutoDialect/: CMakeLists.txt  TutoTest.mlir
